--- a/shard.yml
+++ b/shard.yml
@@ -6,19 +6,24 @@ authors:
 
 targets:
   tiktoker:
-    main: src/tiktoker.cr
+    main: src/cli.cr
 
 crystal: 1.0.0
 
 dependencies:
-  admiral:
-    github: jwaldrip/admiral.cr
   crest:
     github: kandayo/crest
     branch: kdy/expose-timeouts
+  progress:
+    github: kandayo/progress.cr
   retriable:
     github: Sija/retriable.cr
   tallboy:
     github: epoch/tallboy
+
+development_dependencies:
+  webmock:
+    github: manastech/webmock.cr
+    branch: master
 
 license: MIT
